# app_control

./: .gitignore  AGENTS.md  Makefile  README.md  inventory.sh  pyproject.toml
app_control/: __init__.py  catalog.py  cli.py  cohorts.py  quality.py
apps/: 123_pan.yaml  activepieces.yaml  agent_zero.yaml  agentgpt.yaml  agenticseek.yaml  agentless.yaml  agno.yaml  aider.yaml  aihub.yaml  aionui.yaml  aliyun_drive.yaml  amazon_q_cli.yaml  amazon_q_developer.yaml  angelclaw.yaml  anthropic_claude.yaml  antigravity.yaml  anydesk.yaml  anythingllm.yaml  arc_browser_max.yaml  arkclaw.yaml  astrbot.yaml  atomic_bot.yaml  augment.yaml  autobot.yaml  autoclaw.yaml  autocoderover.yaml  autogen.yaml  autoglm_claw.yaml  autogpt.yaml  automa.yaml  babyclaw.yaml  baichuan_chat.yaml  baidu_comate.yaml  baidu_netdisk.yaml  baidu_translate.yaml  bittorrent.yaml  blackbox.yaml  bolt.yaml  boltai.yaml  box.yaml  (+318 more)
archive/: CLAUDE.md.bak  app_data_leak_risk_catalog.json  app_data_leak_risk_catalog.schema.json  batch_process_apps.sh  catalog_i18n_zh.json  claw_agent_landscape_2026Q1_closed_source_macos_apps_v1.csv  claw_agent_landscape_2026Q1_full.csv  claw_agent_landscape_2026Q1_github_strict_shortlist_v3.csv  claw_agent_landscape_2026Q1_research.json  claw_ecosystem_full_report.csv  easy_catalog_viewer.html  enterprise_app_monitoring_profile.json  enterprise_app_monitoring_profile.schema.json
docs/: APP_ANALYSIS_PLAYBOOK.md  PROJECT_STANDARD.md  QUALITY_STANDARDS.md  TARGETED_ALERT_WORKFLOWS.md
generators/: __init__.py  esql_rules.py  jamf_scan.py
schemas/: app.schema.yaml
(+45 files in other folders)
